# proxy-access-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
alembic/: env.py
alembic/versions/: 05e6cd6e07d2_initial_tables.py  3ef55d2ca319_initial.py  eece1b0034b4_init.py
app/: celery_app.py  config.py  database.py  main.py
app/core/: __init__.py  config.py  database.py  security.py
app/models/: __init__.py  user.py  virtual_machine.py  vitrual_machine.py
app/routers/: admin.py  auth.py  users.py  vm.py  websocket.py
app/schemas/: __init__.py  user.py  virtual_machine.py
app/services/: __init__.py  auth_service.py  user_service.py  vm_service.py
app/tasks/: email_tasks.py
desktop_app/: .gitignore  main.py  pyproject.toml
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Navbar.vue  Notification.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js  notification.js
frontend/src/views/: LoginView.vue  ProfileView.vue  RegisterView.vue
tests/: conftest.py  test_api.py
