[project]
name = "proxy-access-service"
version = "0.1.0"
description = "Proxy access service with registration and a personal account"
authors = [
    {name = "delirij",email = "antonvink362@gmail.com"}
]
package-mode = false
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "websockets (>=16.0,<17.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "cryptography (>=46.0.7,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
