[project]
name = "desktop-proxy-app"
version = "0.1.0"
description = "Desktop client for proxy access"
authors = [
    {name = "delirij", email = "antonvink362@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "websockets (>=12.0,<13.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
